src/objects/Component_Movement_Table__c.object
<CustomObject>
    <fields>
        <fullName>Total_Net_Amount__c</fullName>
        <label>Total Net Amount</label>
        <summarizedField>Component_Movement_line_Item__c.Total_Amount__c</summarizedField>
        <summaryForeignKey>Component_Movement_line_Item__c.Component_Movement_Table__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <formula>Quantity__c  +  Quantity_2__c  +  Quantity_3__c  +  Quantity_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Usable__c</fullName>
        <formula>(Usable_Amount1__c +  Usable_Amount2__c + Usable_Amount3__c + Usable_Amount4__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (Usable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_VAT_Amount__c</fullName>
        <label>Total VAT Amount</label>
        <summarizedField>Component_Movement_line_Item__c.VAT_Amount__c</summarizedField>
        <summaryForeignKey>Component_Movement_line_Item__c.Component_Movement_Table__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>( Amount_1__c  +  Amount_2__c  + Amount_3__c + Amount_4__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transfeerred_to_stock_point_CST_No__c</fullName>
        <formula>Transferred_to_Stock_Point__r.CST_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transfeerred to stock point CST No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfeerred_to_stock_point_PAN_No__c</fullName>
        <formula>Transferred_to_Stock_Point__r.Pan_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transfeerred to stock point PAN No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfeerred_to_stock_point_TIN_No__c</fullName>
        <formula>Transferred_to_Stock_Point__r.TIN_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transfeerred to stock point TIN No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transferred_to_Stock_Point__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transferred to Stock Point</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>Stock_Point__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Engineer</value>
            </filterItems>
            <filterItems>
                <field>Stock_Point__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Stock_Point__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Branch, Service Center</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Stock_Point__c</referenceTo>
        <relationshipLabel>Components Movement Table (Transferred to Stock Point)</relationshipLabel>
        <relationshipName>R00N90000003PMFBEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Entry__c</fullName>
        <label>Type of Entry</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deduct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Receipt__c</fullName>
        <label>Type of Receipt</label>
        <picklist>
            <picklistValues>
                <fullName>Returned by Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock Returned by Service Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Replacement_del__c</fullName>
        <formula>CASE( Service_Request__r.Type_of_Replacement__c , &quot;Component Replacement&quot;, &quot;Component Replacement&quot;, &quot;Battery Replacement&quot;, &quot;Battery Replacement&quot;,&quot;Product Replacement&quot;,&quot;Product Replacement&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Replacement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Service_Request__c</fullName>
        <formula>CASE( Service_Request__r.Type_of_Service_Request__c, &quot;Sale of Component&quot;, &quot;Sale of Component&quot;, &quot;Warranty&quot;, &quot;Warranty&quot;, &quot;FOC&quot;, &quot;FOC&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Service Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Transfer__c</fullName>
        <label>Type of Transfer</label>
        <picklist>
            <picklistValues>
                <fullName>Stock Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred to Service Engineer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UoM_1__c</fullName>
        <formula>CASE(Select_Component__r.UoM__c, &quot;Ea&quot;, &quot;Ea&quot;, &quot;Set&quot;,&quot;Set&quot;, &quot;Mts&quot;, &quot;Mts&quot;, &quot;Lts&quot;, &quot;Lts&quot;, &quot;Kg&quot;, &quot;Kg&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UoM 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM_2__c</fullName>
        <formula>CASE(Select_Component_2__r.UoM__c, &quot;Ea&quot;, &quot;Ea&quot;, &quot;Set&quot;,&quot;Set&quot;, &quot;Mts&quot;, &quot;Mts&quot;, &quot;Lts&quot;, &quot;Lts&quot;, &quot;Kg&quot;, &quot;Kg&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UoM 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM_3__c</fullName>
        <formula>CASE( Select_Component_3__r.UoM__c , &quot;Ea&quot;, &quot;Ea&quot;, &quot;Set&quot;,&quot;Set&quot;, &quot;Mts&quot;, &quot;Mts&quot;, &quot;Lts&quot;, &quot;Lts&quot;, &quot;Kg&quot;, &quot;Kg&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UoM 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsertId__c</fullName>
        <label>UpsertId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usable_Amount1__c</fullName>
        <formula>Received_Quantity1__c  *  Stock_Transfer_Price_Unit_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usable Amount1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Usable_Amount2__c</fullName>
        <formula>Received_Quantity2__c  *  Stock_Transfer_Price_Unit_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usable Amount2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Usable_Amount3__c</fullName>
        <formula>Received_Quantity3__c *  Stock_Transfer_Price_Unit_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usable Amount3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Used_by_Service_Engineer__c</fullName>
        <formula>Service_Request__r.Service_Engineer_Assigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Used by Service Engineer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserAddress__c</fullName>
        <label>UserAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vat_Amount__c</fullName>
        <formula>( Amount_1__c + Amount_2__c + Amount_3__c+  Amount_4__c)*  Vat_Percentage__c</formula>
        <label>Total Vat Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vat_Percentage__c</fullName>
        <label>Vat Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vehicle_No__c</fullName>
        <label>Vehicle No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trgOldOwnerId__c</fullName>
        <label>trgOldOwnerId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Component Movement Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Challan_No__c</columns>
        <columns>MRN_No__c</columns>
        <columns>Stock_Transfer_Sl_No__c</columns>
        <columns>Defective_Item_is_different__c</columns>
        <columns>Defective_Quantity_Returned__c</columns>
        <columns>Defective_Item_Returned__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Components_Sold</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Type_of_Service_Request__c</columns>
        <columns>Component_Code__c</columns>
        <columns>Amount_1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Component_Movement_Table__c.ComponentsUsedinServiceRequest</value>
        </filters>
        <label>Components Used in SR</label>
    </listViews>
    <listViews>
        <fullName>Inward_Movement</fullName>
        <booleanFilter>(1 OR 2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>MRN_No__c</columns>
        <columns>MRN_No_Trig__c</columns>
        <columns>Date__c</columns>
        <columns>Type_of_Receipt__c</columns>
        <columns>Stock_Transfer_Sl_No__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Receipt__c</field>
            <operation>equals</operation>
            <value>Returned by Customer</value>
        </filters>
        <filters>
            <field>Type_of_Receipt__c</field>
            <operation>equals</operation>
            <value>Stock Returned by Service Engineer</value>
        </filters>
        <filters>
            <field>Type_of_Receipt__c</field>
            <operation>equals</operation>
            <value>Purchase</value>
        </filters>
        <label>Inward Movement</label>
    </listViews>
    <listViews>
        <fullName>Outward_Lock</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Challan_No__c</columns>
        <columns>Challan_No_Trig__c</columns>
        <columns>Component_Status__c</columns>
        <columns>CST_No__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Component_Movement_Table__c.Outward_Lock</value>
        </filters>
        <label>Outward Lock</label>
    </listViews>
    <listViews>
        <fullName>Pending_Stock_Inward</fullName>
        <columns>NAME</columns>
        <columns>Stock_Transfer_Sl_No__c</columns>
        <columns>Stock_Transfer_Sl_No_Trig__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stock_Transfer_Status__c</field>
            <operation>equals</operation>
            <value>In Transit</value>
        </filters>
        <filters>
            <field>Cancelled__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Pending Stock Inward</label>
    </listViews>
    <listViews>
        <fullName>STN</fullName>
        <columns>Stock_Transfer_Sl_No__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Challan_No__c</columns>
        <columns>MRN_No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stock_Transfer_Sl_No__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Stock_Transfer_Sl_No__c</field>
            <operation>notContain</operation>
            <value>STN</value>
        </filters>
        <label>STN</label>
    </listViews>
    <listViews>
        <fullName>Stock_Transfer_Received</fullName>
        <columns>NAME</columns>
        <columns>MRN_No__c</columns>
        <columns>Stock_Transfer_Sl_No__c</columns>
        <columns>Date__c</columns>
        <columns>Received_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stock_Transfer_Status__c</field>
            <operation>equals</operation>
            <value>Received</value>
        </filters>
        <label>Stock Transfer Received</label>
    </listViews>
    <listViews>
        <fullName>TRC_Stock_Transfer</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Document_Invoice_No__c</columns>
        <columns>From_Org__c</columns>
        <columns>Transferred_to_Stock_Point__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>From_Org__c</field>
            <operation>equals</operation>
            <value>019-SC-GGN</value>
        </filters>
        <label>TRC Stock Transfer</label>
    </listViews>
    <nameField>
        <displayFormat>TID-{0000000}</displayFormat>
        <label>Component Movement Transaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Components Movement Table</pluralLabel>
    <recordTypes>
        <fullName>ComponentsUsedinServiceRequest</fullName>
        <active>true</active>
        <description>Components Used in Service Request</description>
        <label>Components Used in Service Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>InwardMovement</fullName>
        <active>true</active>
        <description>All inward stock movement related to Service Center</description>
        <label>Inward Movement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inward_Movement_Lock</fullName>
        <active>true</active>
        <label>Inward Movement Lock</label>
    </recordTypes>
    <recordTypes>
        <fullName>OutwardMovement</fullName>
        <active>true</active>
        <description>All outward stock movement related to Service Center</description>
        <label>Outward Movement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outward_Lock</fullName>
        <active>true</active>
        <label>Outward Lock</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Sale</fullName>
        <active>true</active>
        <label>Product Sale</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reconciliation</fullName>
        <active>true</active>
        <description>Reconciliation of Stocks</description>
        <label>Reconciliation</label>
    </recordTypes>
    <recordTypes>
        <fullName>ShortReceipt</fullName>
        <active>true</active>
        <description>All Short Receipt transactions</description>
        <label>Short Receipt</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stock_Inward</fullName>
        <active>true</active>
        <label>Stock Inward</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stock_Received</fullName>
        <active>true</active>
        <description>For Inward Received</description>
        <label>Stock Received</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Component_and_Quantity1_Mandate</fullName>
        <active>true</active>
        <description>Where ever there is a Component chosen, it should have an associated quantity</description>
        <errorConditionFormula>AND( 
(Select_Component__c &lt;&gt; &quot;&quot; ), 
(From_Org__c &lt;&gt; &apos;019-SC-GGN&apos; ), 
( Type_of_Service_Request__c &lt;&gt; &quot;Warranty&quot;), 
ISNULL(Quantity__c),
 (Quantity__c &lt;&gt; 0))</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Please enter a valid component and quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Component_and_Quantity2_Mandate</fullName>
        <active>true</active>
        <description>Where ever there is a Component chosen, it should have an associated quantity</description>
        <errorConditionFormula>(Select_Component_2__c  &lt;&gt; &quot;&quot; &amp;&amp;( Quantity_2__c   &lt;=   0 || ISNULL(Quantity_2__c))) ||
(Select_Component_2__c  = &quot;&quot; &amp;&amp;( Quantity_2__c   &lt;=   0 || NOT(ISNULL(Quantity_2__c)))) &amp;&amp;  From_Org__c &lt;&gt; &apos;019-SC-GGN&apos;</errorConditionFormula>
        <errorDisplayField>Quantity_2__c</errorDisplayField>
        <errorMessage>Please enter a valid component and quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Component_and_Quantity3_Mandate</fullName>
        <active>true</active>
        <description>Where ever there is a Component chosen, it should have an associated quantity</description>
        <errorConditionFormula>(Select_Component_3__c &lt;&gt; &quot;&quot; &amp;&amp;( Quantity_3__c &lt;= 0 || ISNULL(Quantity_3__c))) || 
(Select_Component_3__c = &quot;&quot; &amp;&amp;( Quantity_3__c &lt;= 0 || NOT(ISNULL(Quantity_3__c)))) &amp;&amp;  From_Org__c &lt;&gt; &apos;019-SC-GGN&apos;</errorConditionFormula>
        <errorDisplayField>Quantity_3__c</errorDisplayField>
        <errorMessage>Please enter a valid component and quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Component_and_Quantity4_Mandate</fullName>
        <active>true</active>
        <description>Where ever there is a Component chosen, it should have an associated quantity</description>
        <errorConditionFormula>(Select_Component_4__c &lt;&gt; &quot;&quot; &amp;&amp;( Quantity_4__c &lt;= 0 || ISNULL(Quantity_4__c))) || 
(Select_Component_4__c = &quot;&quot; &amp;&amp;( Quantity_4__c &lt;= 0 || NOT(ISNULL(Quantity_4__c)))) &amp;&amp;  From_Org__c &lt;&gt; &apos;019-SC-GGN&apos;</errorConditionFormula>
        <errorDisplayField>Quantity_4__c</errorDisplayField>
        <errorMessage>Please enter a valid component and quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Defective_Item_returned_Blank_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>OR( IF( Defective_Item_is_different__c = True, 
ISBLANK( Defective_Item_Returned__c ) , 
False) , 
IF(Defective_Item_is_different__c = False , 
NOT( ISBLANK (Defective_Item_Returned__c) ) , 
false) )</errorConditionFormula>
        <errorDisplayField>Defective_Item_is_different__c</errorDisplayField>
        <errorMessage>If defective item is different then defective item returned can not be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Defective_Quantity_Validation</fullName>
        <active>true</active>
        <description>Defective Quantity Validation</description>
        <errorConditionFormula>AND
( ISPICKVAL(Component_Status__c , &apos;Defective&apos;), 
 $RecordType.Name = &apos;Stock Inward&apos;,
OR
(
 ISBLANK( Received_Quantity1__c ) = False, 
ISBLANK( Received_Quantity2__c )= False,
ISBLANK( Received_Quantity3__c )= False,
ISBLANK( Received_Quantity4__c )= False
))</errorConditionFormula>
        <errorMessage>Usable Quantity cannot be received when Component status is Defective.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Defective_Quantity_can_be_entered_once</fullName>
        <active>true</active>
        <description>In case of Warranty, Defective Quantity Value can be entered only once</description>
        <errorConditionFormula>AND(
ISCHANGED(  Defective_Quantity_Returned__c ), 
NOT(ISNULL (Defective_Quantity_Returned__c)))</errorConditionFormula>
        <errorDisplayField>Defective_Quantity_Returned__c</errorDisplayField>
        <errorMessage>In case of Warranty, Defective Quantity Value can be entered only once</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dispatched_Through_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
         AND( RecordTypeId  = &quot;01290000000NxCl&quot;,
                    ISPICKVAL( Type_of_Transfer__c , &quot;Stock Transfer&quot;) ) , 
                   
                AND( ISBLANK(  TEXT(Dispatched_Through__c) ) ,
                                  ISBLANK(  TEXT( Road_Permit__c )) ) , 
                                
                       False)</errorConditionFormula>
        <errorDisplayField>Dispatched_Through__c</errorDisplayField>
        <errorMessage>In case of Stock Transfer Dispatched Through &amp; Road Permit ban not be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>For_Service_Center_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISBLANK( For_Service_Center__c ) ) ,
 Transferred_to_Stock_Point__c  &lt;&gt;  For_Service_Center__c ,
  $Profile.Name  &lt;&gt; &apos;System Administrator&apos;,
 ISPICKVAL(Stock_Transfer_Status__c , &apos;In Transit&apos;) ,
 RecordTypeId  = &apos;01290000000NxCl&apos;
)</errorConditionFormula>
        <errorMessage>Transferred to Stock Point should be equal to For Service Center</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>In_Out_should_be_equal_in_warranty</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
( RecordType.DeveloperName  = &quot;Components Used in Service Request&quot;) ,
(Defective_Quantity_Returned__c    &lt;&gt;    Quantity__c     ),
OR(
(  $ObjectType.Service_Request__c.Fields.Warranty_Status__c  = &quot;Yes&quot; )))</errorConditionFormula>
        <errorMessage>In_Warranty_Qty._1_&amp;_Defective_should_be</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Sale_Price</fullName>
        <active>true</active>
        <description>Sale Price is mandatory for all Service Requests that are &quot;Sale of Component&quot; Type</description>
        <errorConditionFormula>AND(Type_of_Service_Request__c = &quot;Sale of Component&quot;, Sale_Price_Unit__c = 0)</errorConditionFormula>
        <errorMessage>Please put in a Sale Price for Item Selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Recieving_Stock_Point</fullName>
        <active>true</active>
        <description>In Case of &quot;Returned by Customer&quot; Inward Movement, there is no &quot;Received from Stock Point&quot;</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Type_of_Receipt__c, &quot;Returned by Customer&quot;), 
(Received_from_Stock_Point__c &lt;&gt; &quot;&quot;))</errorConditionFormula>
        <errorMessage>In Case of &quot;Returned by Customer&quot; Inward Movement, there is no &quot;Received from Stock Point&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Recieving_Stock_Points</fullName>
        <active>true</active>
        <description>In Case of &quot;Purchase&quot; Inward Movement, there is no &quot;Received from Stock Point&quot;</description>
        <errorConditionFormula>AND(
ISPICKVAL(Type_of_Receipt__c, &quot;Purchase&quot;),   
(Received_from_Stock_Point__c  &lt;&gt;  &quot;&quot;))</errorConditionFormula>
        <errorMessage>In Case of &quot;Purchase&quot; Inward Movement, there is no &quot;Received from Stock Point&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Sale_Price_for_FOC_Component</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Type_of_Service_Request__c = &quot;FOC&quot;, Sale_Price_Unit__c  &lt;&gt; 0)</errorConditionFormula>
        <errorMessage>Kindly check that the Component Sale Price is nil in case of FOC and Warranty Cases</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Sale_Price_for_Warranty_Component</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Type_of_Service_Request__c = &quot;Warranty&quot;, Sale_Price_Unit__c &lt;&gt; 0)</errorConditionFormula>
        <errorMessage>Kindly check that the Component Sale Price is nil in case of FOC and Warranty Cases</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Once_Created_Can_not_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Profile.Name  &lt;&gt; &apos;System Administrator&apos;, 
                    $Profile.Name &lt;&gt; &apos;sukam System Administrator&apos; ,
 Is_Created__c  = True ,
 RecordTypeId  = &apos;01290000000NxCi&apos;)</errorConditionFormula>
        <errorDisplayField>Basic__c</errorDisplayField>
        <errorMessage>Can Not Change the record Once it has been Created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Purchase_Rate_1_is_mandatory</fullName>
        <active>true</active>
        <description>For Inward Movement &quot;Purchase Rate&quot; is mandatory for Type of Reciept being PURCHASE</description>
        <errorConditionFormula>AND(
ISPICKVAL(  Type_of_Receipt__c  , &quot;Purchase&quot;) , 
(Select_Component__c   &lt;&gt;   &quot;&quot; ),
OR(
(Purchase_Rate_Unit_1__c &lt;= 0),
ISNULL(Purchase_Rate_Unit_1__c )))</errorConditionFormula>
        <errorDisplayField>Purchase_Rate_Unit_1__c</errorDisplayField>
        <errorMessage>Please put in the Purchase Rate / Unit 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Purchase_Rate_2_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(  Type_of_Receipt__c  , &quot;Purchase&quot;) , 
( Select_Component_2__c  &lt;&gt;   &quot;&quot; ),
OR(
( Purchase_Rate_Unit_2__c  &lt;= 0),
ISNULL( Purchase_Rate_Unit_2__c  )))</errorConditionFormula>
        <errorDisplayField>Purchase_Rate_Unit_2__c</errorDisplayField>
        <errorMessage>Please put in the Purchase Rate / Unit 2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Purchase_Rate_3_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL( Type_of_Receipt__c , &quot;Purchase&quot;) , 
(  Select_Component_3__c  &lt;&gt; &quot;&quot; ), 
OR( 
(  Purchase_Rate_Unit_3__c &lt;= 0), 
ISNULL(  Purchase_Rate_Unit_3__c  )))</errorConditionFormula>
        <errorDisplayField>Purchase_Rate_Unit_3__c</errorDisplayField>
        <errorMessage>Please put in the Purchase Rate / Unit 3</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Purchase_Rate_4_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL( Type_of_Receipt__c , &quot;Purchase&quot;) , 
(  Select_Component_4__c  &lt;&gt; &quot;&quot; ), 
OR( 
(  Purchase_Rate_Unit_4__c &lt;= 0), 
ISNULL(  Purchase_Rate_Unit_4__c  )))</errorConditionFormula>
        <errorDisplayField>Purchase_Rate_Unit_4__c</errorDisplayField>
        <errorMessage>Please put in the Purchase Rate / Unit 4</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Qty_Used_is_equal_Qty_Returned_Defective</fullName>
        <active>false</active>
        <description>This is a validation to ensure that in case (Type of Service Request = FOC / Warranty) of &quot;Component Used in Service Request&quot;, the quantity of item issued is equal or more than the defective item returned</description>
        <errorConditionFormula>AND( 
(RecordTypeId = &quot;01290000000NxCi&quot;) , 
(Defective_Quantity_Returned__c &gt; Quantity__c ), 
OR( 
( Type_of_Service_Request__c = &quot;Warranty&quot; ) , 
( Type_of_Service_Request__c = &quot;FOC&quot; ) ) 
)</errorConditionFormula>
        <errorDisplayField>Defective_Quantity_Returned__c</errorDisplayField>
        <errorMessage>Please check: Defective Quantity Returned cannot be more than Quantity 1(Quantity Issued).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_Cannot_be_more_than_9999</fullName>
        <active>true</active>
        <description>The value in the fields quantity 1, quantity 2, quantity 3, quantity 4 cannot be more than 9999</description>
        <errorConditionFormula>OR (  Quantity__c  &gt; 9999,  Quantity_2__c &gt; 9999, Quantity_3__c &gt; 9999, Quantity_4__c &gt; 9999 )</errorConditionFormula>
        <errorDisplayField>Basic__c</errorDisplayField>
        <errorMessage>The Quantity cannot be greater than 9999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Road_permit_can_not_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( Road_Permit__c , &quot;Yes&quot;) , 
                   ISBLANK( Road_Permit_No__c ) , 
                              False)</errorConditionFormula>
        <errorDisplayField>Road_Permit_No__c</errorDisplayField>
        <errorMessage>Fill Road Permit No. if road permit is YES.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sale_Price_Mandatory</fullName>
        <active>false</active>
        <description>In case of Component Used in Service Request, If Type of Service Request is &quot;Sale of Component&quot; then Sale Price / Unit 1 is mandatory</description>
        <errorConditionFormula>AND(
(RecordTypeId = &quot;01290000000NxCi&quot;),
(Type_of_Service_Request__c = &quot;Sale of Component&quot;),
(Select_Component__c   &lt;&gt;   &quot;&quot; ),
OR(
( Sale_Price_Unit__c &lt;= 0),
ISNULL( Sale_Price_Unit__c )))</errorConditionFormula>
        <errorDisplayField>Sale_Price_Unit__c</errorDisplayField>
        <errorMessage>Please put in value of &quot;Sale Price / Unit 1&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Engineer_has_resigned</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordTypeId = &quot;01290000000NxCl&quot;, 
 OR( Transferred_to_Stock_Point__r.Resign__c = True,
                 Transferred_to_Stock_Point__r.Active__c  = False) ,
ISPICKVAL(Type_of_Transfer__c, &quot;Transferred to Service Engineer&quot;) )</errorConditionFormula>
        <errorMessage>Can not move stock to this Engineer as he has resigned.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Request_No_is_manadatory</fullName>
        <active>true</active>
        <description>This is a validation to prevent user from creating any &quot;Component Used in Service Request&quot; transaction from &quot;Component Movement Table&quot;</description>
        <errorConditionFormula>AND(
(RecordTypeId = &quot;0122000000094Ca&quot;) ,
(Service_Request__c = &quot;&quot;))</errorConditionFormula>
        <errorMessage>Please go through the related list option to create this entry</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRC_1_Branch_and_Defective_Status</fullName>
        <active>true</active>
        <description>can not send Defective items to TRC 1 Branch</description>
        <errorConditionFormula>AND( ISPICKVAL(Component_Status__c , &apos;Defective&apos;) ,
 Transferred_to_Stock_Point__r.Service_Center_Location_Code__c  = &apos;1111-TRC Branch 1&apos;)</errorConditionFormula>
        <errorMessage>can not send Defective items to TRC 1 Branch</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transfer_to_service_Engineer_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>AND( RecordTypeId  = &apos;01290000000NxCl&apos;,
 ISPICKVAL( Type_of_Transfer__c , &quot;Transferred To Service Engineer&quot;) , 
  Transferred_to_Stock_Point__r.Service_Center_Location_Code__c  &lt;&gt;  Transferred_to_Stock_Point__r.Related_to_Service_Center__r.Service_Center_Location_Code__c )</errorConditionFormula>
        <errorMessage>Service Center can transfer stocks to his related service Engineer Only not to other Service Center&apos;s Engineers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transfer_to_service_Engineer_rule_1</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Type_of_Transfer__c , &apos;Stock Transfer&apos;) ,
 Transferred_to_Stock_Point__r.RecordTypeId  = &quot;01290000000NwDa&quot;)</errorConditionFormula>
        <errorDisplayField>Type_of_Transfer__c</errorDisplayField>
        <errorMessage>Type of transfer should be Transferred to Service Eng. while transferring Stock to Service Engineer.</errorMessage>
    </validationRules>
</CustomObject>